# mpc-rbt-student

./: config.json  run_receiver.sh  run_sender.sh
include/: Localization.hpp  MotionControl.hpp  Planning.hpp
include/mpc-rbt-solution/: Receiver.hpp  Sender.hpp
launch/: planning.launch.py  solution.launch.py
rviz/: config.rviz
src/: KeyboardControl.cpp  Localization.cpp  MotionControl.cpp  Planning.cpp  Receiver.cpp  Sender.cpp  localization_node.cpp
src/battery_monitor/: CMakeLists.txt  package.xml
src/battery_monitor/src/: battery_node.cpp
src/util/: Utils.cpp
